--- a/loginpage/login.html
+++ b/loginpage/login.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <form action="">
+        <h2>Login your account</h2>
         <input type="text" placeholder="Enter username">
         <input type="password" placeholder="Enter password">
         <input type="submit" value="Login">
